--- a/styles/g3-architect.css
+++ b/styles/g3-architect.css
@@ -1,6 +1,7 @@
 /* Work sans font from google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans&family=PT+Serif&family=Poppins:wght@800&family=Space+Mono:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
+/* Shared styles */
 * {
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
@@ -8,4 +9,144 @@
     font-family: 'PT Serif', serif;
     font-family: 'Space Mono', monospace;
     font-family: 'Work Sans', sans-serif;
+}
+
+.btn-primary {
+    padding: 1.25rem 1.6rem;
+    border-radius: 8px;
+    background: #FF900E;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #FFF;
+    border: 0;
+}
+
+/* Header's styles */
+header {
+    background-color: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+/* Navigation styles */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+nav>ul {
+    display: flex;
+}
+
+ul>li {
+    list-style: none;
+    margin-right: 30px;
+}
+
+ul>li a {
+    text-decoration: none;
+    color: #424242;
+    font-weight: 500;
+}
+
+/* Banner area's styles */
+.banner-content {
+    max-width: 800px;
+    text-align: center;
+    margin: 20px auto;
+}
+
+.banner img {
+    width: 100%;
+}
+
+/* Main area's styles */
+main {
+    max-width: 1440px;
+    margin: 0 3rem 0 6rem;
+}
+
+.team-container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.team-content-title {
+    color: #727272;
+    font-size: 2.8rem;
+    font-weight: 500;
+}
+
+.name-highlight {
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.name-dark {
+    color: #131313;
+    font-weight: 700;
+}
+
+.team-content-description {
+    color: #727272;
+    font-weight: 400;
+}
+
+
+
+
+/* Responsive with media-query */
+/* Small devices responsive */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 1.8rem;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    main {
+        margin: 0;
+    }
+
+    .team-container {
+        flex-direction: column;
+        flex-direction: column-reverse;
+        margin: 0 1rem;
+    }
+
+    .team-img-container {
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:996px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    .team-container {
+        flex-direction: column;
+        flex-direction: column-reverse;
+        margin: 0 1rem;
+    }
 }
